Commit to fix rows and columns white spaces

--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@
 
 table{
     width: 100%;
+    border-collapse: collapse;
 }
 
 .twoColumns{
